<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MotorCycle App</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_screen">MainScreen</string>
    <string name="title_activity_event">EventActivity</string>
    <string name="hello">Ride Me</string>
    <string name="friend_list">Location</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="refreshall">All</string>
    <string name="refreshothers">Others</string>
    <string name="messaging">Messaging</string>
    <string name="local_service_started">App service started</string>
    <string name="local_service_stopped">App service stopped</string>
    <string name="local_service_connected">local_service_connected</string>
    <string name="OK">OK</string>
    <string name="not_connected_to_service">Connection Error</string>
    <string name="fill_both_username_and_password">Please fill in both username and password</string>
    <string name="make_sure_username_and_password_correct">Please make sure that your username and password are correct</string>
    <string name="user_offline">This user is offline</string>
    <string name="sign_up">Sign up</string>
    <string name="exit_application">Logout</string>
    <string name="password_again">Password(again):</string>
    <string name="email">E-mail</string>
    <string name="signup_fill_all_fields">Please fill all fields</string>
    <string name="signup_type_same_password_in_password_fields">Type same password in password fields</string>
    <string name="signup_failed">Sign up failed because of unknown reason</string>
    <string name="signup_username_crashed">Your username have been already taken, please try another username</string>
    <string name="signup_successfull">Your registration is completed successfully,\n you can login now </string>
    <string name="username_and_password_length_short">Username and password length must be at least 5</string>
    <string name="add_new_friend">Add new friend</string>
    <string name="add_friend">You have no friends,\n you can add new friends through the menu</string>
    <string name="add">Chat</string>
    <string name="find_friend">Find Friend</string>
    <string name="request_sent">Your request has been sent</string>
    <string name="type_friend_username">Please type your friends username</string>
    <string name="new_friend_request_exist">New friend request</string>
    <string name="approve_selected_friends">Approve Selected and Discard Others</string>
    <string name="not_connected_to_network">There is no available network</string>
    <string name="message_cannot_be_sent">Message was not sent</string>
    <string name="previous_chats">Previous Chats</string>
    <string name="get_location">Stalk</string>
    <string name="exit_app">Exit</string>
    <string name="nearby_users">Nearby Users</string>
    <string name="title_activity_help_me">HelpMe</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_faq">FAQ</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_settme">Settme</string>
    <string name="title_activity_logout">Logout</string>
    <string name="title_activity_main">MainActivity</string>

</resources>
