<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
	android:orientation="vertical"
    android:padding="10dip"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:text="Username"
    />
    
    <EditText android:id="@+id/userName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:singleLine="true"
        android:password="false"
    />
    
    <TextView 
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_toLeftOf="@+id/lname"     
        android:text="First Name"
    />
    
    <EditText android:id="@+id/fname"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:singleLine="true"
        android:layout_toLeftOf="@+id/lname"
        android:password="false"
    />
     <TextView 
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_toRightOf="@+id/fname"
        android:layout_alignRight="@id/fname"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="1dip"
        android:text="Last Name"
    />
    
    <EditText android:id="@+id/lname"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_toRightOf="@+id/fname"
        android:layout_alignRight="@id/fname"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="1dip"
        android:singleLine="true"
        android:password="false"
    />
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:text="@string/password"
    />
    
    <EditText android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:singleLine="true"
        android:password="true"
    /> 
    
     <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:text="@string/password_again"
    />
    
    <EditText android:id="@+id/passwordAgain"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:singleLine="true"
        android:password="true"
    /> 
    

    
    <LinearLayout android:orientation="horizontal"
    			  android:layout_width="fill_parent"
    			  android:layout_height="wrap_content">
			  
    <Button android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
    />
    <Button android:id="@+id/cancel_signUp"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/cancel"
    />
	</LinearLayout>

</LinearLayout>




